--- a/config.php.example
+++ b/config.php.example
@@ -9,4 +9,5 @@ define('AKISMET_KEY','');
 define('MAILGUN_KEY','');
 define('MAILGUN_DOMAIN','');
 define('MAILGUN_TO','');
+define('MAILGUN_FROM','');
 define('MAILGUN_SUBJECT','New request from website {{site_url}}');
